Finished with DOM manipulation for displaying the movie info. will need to fix alignment of elements

--- a/style.css
+++ b/style.css
@@ -55,6 +55,11 @@ hr {
 
 .soundtracklist {
     color: white;
+    clear: both;
+}
+
+.movie-info {
+    text-align: left;
     float: right;
 }
 
